* Added support for "color" property, including color picker UI (dowobeha)

Changes for 0.9.1

* implemented minimax AI and alpha-beta AI; currently used in Tic Tac Toe and King's Table (dowobeha)

* implemented new King's Table game and Tic Tac Toe game (dowobeha)

* created common code package to minimize code duplication between different games (dowobeha)

* enhanced game framework to allow easier implementation of new grid-based games (dowobeha)

* show time in chat panel, default is to show chat time in lobby, but not in game (gansito)

* bug fixes (tclayton):
*  [ 1204024 ] Missing Sea Zone 
*  [ 1510049 ] unloading troops bug
*  [ 1640658 ] fighters in classic attacking on friendly carrier
*  [ 1641051 ] Transport Unloading Bug
*  [ 1652870 ] each phase should begin with focus on tabs panel
*  [ 1655181 ] clean up history log entries
*  [ 1659713 ] Java Exception
*  [ 1661095 ] MovePanel should dynamically select best units for route
*  [ 1662464 ] null pointer exception when skipping move phase
*  [ 1662938 ] shadow units don't appear in map overlap sections
*  [ 1671750 ] improve logic for transport load order
*  [ 1672743 ] exceptions thrown by delegates get mangled by proxy
*  [ 1696749 ] Unload problem from allied transport after undo
*  [ 1753866 ] load and unload should have default selections

* feature [ 1749993 ] new "History Log" feature (tclayton)

* feature [ 1746894 ] Save Screenshot feature (tclayton)

* feature [ 1673208 ] show move validation warnings/errors when moving mouse (tclayton)

* feature [ 1661088 ] code cleanup - implement MovePanel getMovableMatch() method (tclayton)

* new revised map (zero  pilot)

* in revised, remove connection between 25 Sea Zone and 43 Sea Zone (zero pilot)

* new vc image (zero pilot)

* japanese tanks defend at 2 in pacific (comradekev)

* non jopanese units defend at 1 in first round of pacific (comradekev)
